tap highlight color fixed

--- a/style.css
+++ b/style.css
@@ -12,14 +12,21 @@ body {
 
 }
 
+
+
 :root {
     --background: #151728;
     ;
     --shadow: rgba(0, 0, 0, 0.1) 0px 3px 6px 0px, rgba(0, 0, 0, 0.08) 0px 1px 3px 0px;
+
 }
 
 body {
     background-color: var(--background);
+}
+
+html {
+    -webkit-tap-highlight-color: transparent;
 }
 
 .main {
@@ -3211,6 +3218,3 @@ body.light .paginationBtn {
     width: 55px;
     height: 55px;
 }
-
--webkit-tap-highlight-color: transparent;
-/* for removing the highlight */
