--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html {
 
 .main {
     display: flex;
+    position: relative;
 }
 
 .overlay {
@@ -722,9 +723,9 @@ body.minimize_siderbar .Home_header_container {
     gap: 1rem;
     padding: 26px 22px 25px 31px;
     left: 31%;
-    top: -74%;
+    top: -60rem;
     border-radius: 12px;
-    transition-duration: 0.4s;
+    transition-duration: 1s;
     transition-timing-function: linear;
 }
 
@@ -736,7 +737,27 @@ body.minimize_siderbar .Home_header_container {
 .alertMsg_para {
     margin: 1px 0 9px 7px;
     color: #505050;
+    text-align: center;
+    font-weight: 600;
+    font-size: larger;
 }
+
+
+.alertLink {
+    border: none;
+    outline: none;
+    padding: 10px 80px 10px 80px;
+    font-size: 13px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    border-radius: 11px;
+    width: fit-content;
+    box-shadow: var(--shadow);
+    background-color: #3b84f1;
+    color: #000000;
+    cursor: pointer;
+}
+
 
 .okaybtn {
     border: none;
@@ -2361,21 +2382,7 @@ body.light .msg_episode {
         margin: 13px 29px 30px 9px;
     }
 
-    .alertMsg {
-        background-color: #ffff;
-        height: fit-content;
-        width: 19rem;
-        position: absolute;
-        z-index: 4;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        padding: 26px 22px 25px 31px;
-        left: 14%;
-        top: 50%;
-        border-radius: 12px;
-    }
+
 
     .search_result_div {
         padding: 8px 0px 9px 0px;
@@ -2731,6 +2738,11 @@ body.light .msg_episode {
         margin-bottom: 10px;
     }
 
+    .alertMsg {
+        left: 10%;
+        transform: scale(0.5);
+    }
+
 
 }
 
@@ -2740,16 +2752,7 @@ body.light .msg_episode {
 
 
 @media (max-width:445px) {
-    .alertMsg {
-        padding: 19px 14px 18px 14px;
-        left: 10%;
-        top: 42%;
-    }
 
-    .alertMsg_header {
-        font-weight: 700;
-        font-size: 22px;
-    }
 
     .playsvg_container {
         position: absolute;
@@ -2780,12 +2783,7 @@ body.light .msg_episode {
 
 @media (max-width:380px) {
 
-    .alertMsg {
-        padding: 19px 14px 18px 14px;
-        left: 10%;
-        top: 42%;
-        width: 15rem;
-    }
+
 
     .alertMsg_para {
         margin: 0px 0 0px 0px;
@@ -2797,7 +2795,9 @@ body.light .msg_episode {
         transform: translateX(39px) translateY(-64px);
     }
 
-
+    .alertMsg {
+        left: -8%
+    }
 
 
 
@@ -2817,32 +2817,14 @@ body.light .msg_episode {
 }
 
 
-.alertMsg {
-    top: -74%;
-    transition-duration: 1s;
-    transition-timing-function: ease-in-out;
-}
-
 .alertactive {
-    top: 50%;
-    animation-name: alertms;
-    animation-duration: 0.5s;
+    top: 0px;
+    transition-duration: 300ms;
     transition-timing-function: linear;
+    transition: all;
 }
 
-@keyframes alertms {
-    0% {
-        top: -74%;
-    }
 
-    70% {
-        top: 57%;
-    }
-
-    100% {
-        top: 50%;
-    }
-}
 
 
 .menu_ul li {
