--- a/style.css
+++ b/style.css
@@ -2749,22 +2749,28 @@ body.light .msg_episode {
 
 .selladd {
     color: white;
-    font-size: 14px;
+    font-size: 19px;
 
 }
 
 .selladd-container {
-    position: fixed;
-    z-index: 100;
+    position: sticky;
+    z-index: 3;
+    top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    height: fit-content;
-    background-color: rgba(0, 0, 0, 0.664);
+    min-height: 3rem;
+    background-color: rgba(169, 169, 169, 0.644);
     display: grid;
     place-items: center;
 }
 
+.vercelLInk {
+    font-size: 20px;
+    padding-left: 5px;
+    color: rgba(0, 0, 255, 0.834);
+}
 
 @media (max-width:445px) {
 
